# zztop

./: Cargo.toml  README.md
docs/brainstorms/: 2026-06-03-zztop-requirements.md
docs/plans/: 2026-06-03-001-feat-zztop-cli-plan.md
src/: datafile.rs  display.rs  main.rs  rank.rs
tests/: integration.rs
