[package]
name = "zztop"
version = "0.1.0"
edition = "2021"
description = "Arrow-key picker for zsh-z top paths"
license = "MIT"

[[bin]]
name = "zztop"
path = "src/main.rs"

[dependencies]
dialoguer = { version = "0.11", default-features = false }
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
